# tiny_universe

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
shader/: default.frag.glsl  default.vert.glsl
src/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  logging.cpp  logging.hpp
src/game/: Object.hpp
src/renderer/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ViewObject.hpp
src/renderer/vk/: Buffer.cpp  Buffer.hpp  Command.cpp  Command.hpp  Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  PipelineFactory.cpp  PipelineFactory.hpp  Swapchain.cpp  Swapchain.hpp  utils.hpp
